...
          ),
        ),
        Padding(
          padding: EdgeInsets.symmetric(
              horizontal: LiveUVLayout.margin, vertical: 8.0),
          child: InkWell(
            key: const Key('arpansaInfo_disclaimerButton'),
            onTap: () {
              showModalBottomSheet(
                  context: context,
                  builder: (BuildContext context) {
                    return Container(
                      padding: EdgeInsets.all(
...
                      child: Column(
                        mainAxisSize: MainAxisSize.min,
                        children: <Widget>[
                          Padding(
                            padding: EdgeInsets.only(bottom: LiveUVSpacing.sp4),
                            child: Text(
                              'Disclaimer',
                              style: Theme.of(context)
                                  .textTheme
                                  .displayLarge!
                                  .copyWith(
                                      fontSize: 17.0,
                                      fontWeight: FontWeight.w600,
...
