...
              ),
            SizedBox(
              width: LiveUVSpacing.sp2,
            ),
            if (!refreshLoadingIndicator)
              Text(
                'Refresh',
                style: Theme.of(context)
                    .textTheme
                    .displaySmall!
                    .copyWith(color: LiveUVColor.primaryFull),
              ),
          ],
...
