...
          border: Border.all(
            color: LiveUVColor.primaryFull,
            width: 2,
          ),
          borderRadius: const BorderRadius.all(Radius.circular(20))),
      child: DropdownButton(
          key: const Key('locationSelection_dropDownButton'),
          borderRadius: BorderRadius.circular(LiveUVBorderRadius.roundedxl),
          elevation: 24,
          iconSize: 32,
          isExpanded: true,
          underline: const SizedBox(),
          dropdownColor: LiveUVColor.lightGrey,
...
